=head1 OmniPITR

=head2 2010-06-28

=over

=item * Fix type in changelog (28 -> 23)

=item * Fix call to tar with 2 --transform options. Some tar versions don't
handle it well, and it's required for omnipitr-backup-slave

=back

=head2 2010-06-23

=over

=item * Fix description of -x option for omnipitr-backup-master

=item * Add information that one should remove finish recovery trigger after
successfull finish of wal replication.

=item * alpha version of omnipitr-backup-slave

=back

=head2 2010-06-12

=over

=item * Fix ommission in workaround for PostgreSQL 8.2 and 8.3 - regarding order
of xlog segments.

=back

=head2 2010-06-10

=over

=item * Fix bug caused by silencing rm - destination-backup directory wasn't
removed after successful exit of backup.

=back

=head2 2010-06-07

=over

=item * Silence rmtree - disable confirmation message to be printed to screen -
to make sure cron jobs with backup don't create irrelevant mails.

=back

=head2 2010-06-05

=over

=item * Added documentation about requirements

=item * Added workaround for PostgreSQL 8.2 and 8.3, which do not wait for .backup
"wal segment" to be archived before returning control from pg_stop_backup()
call.

=item * Added changelog

=back

=head2 COPYRIGHT

The OmniPITR project is Copyright (c) 2009-2010 OmniTI. All rights reserved.